// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-share> Component basic usage 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <bolt-copy-to-clipboard>
              <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
                <button class="c-bolt-copy-to-clipboard__trigger"
                        data-clipboard-text="https://boltdesignsystem.com"
                >
                  <span class="c-bolt-share__link">
                    <bolt-icon name="asset-link"
                               size="medium"
                    >
                      <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
                        <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 24"
                        >
                          <g fill="none"
                             fill-rule="evenodd"
                          >
                            <path fill="var(--bolt-theme-icon, currentColor)"
                                  d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                                  mask="url(#mask-2)"
                            >
                            </path>
                          </g>
                        </svg>
                      </span>
                    </bolt-icon>
                    <span class="c-bolt-share__link-text">
                      Copy share link
                    </span>
                  </span>
                </button>
                <span class="c-bolt-copy-to-clipboard__transition">
                  <span class="c-bolt-share__link">
                    <bolt-icon class="c-bolt-share__copy-animation"
                               name="refresh"
                               size="medium"
                    >
                      <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
                        <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 24"
                        >
                          <g fill="none"
                             fill-rule="evenodd"
                          >
                            <path>
                            </path>
                            <g fill="var(--bolt-theme-icon, currentColor)"
                               fill-rule="nonzero"
                            >
                              <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                              </path>
                            </g>
                          </g>
                        </svg>
                      </span>
                    </bolt-icon>
                  </span>
                </span>
                <span class="c-bolt-copy-to-clipboard__confirmation">
                  <div class="c-bolt-share__link">
                    <bolt-icon name="check"
                               size="medium"
                    >
                      <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
                        <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                             xmlns="http://www.w3.org/2000/svg"
                             viewbox="0 0 24 24"
                        >
                          <g fill="none"
                             fill-rule="evenodd"
                          >
                            <path>
                            </path>
                            <path fill="var(--bolt-theme-icon, currentColor)"
                                  d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                            >
                            </path>
                          </g>
                        </svg>
                      </span>
                    </bolt-icon>
                    <span class="c-bolt-share__link-text">
                      Copied!
                    </span>
                  </div>
                </span>
              </span>
            </bolt-copy-to-clipboard>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: center 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="center"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="center"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-center c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-center c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: end 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="end"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="end"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-end c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-end c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share align: start 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 20 1`] = `
<bolt-share size="medium"
            opacity="20"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-20">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 40 1`] = `
<bolt-share size="medium"
            opacity="40"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-40">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 60 1`] = `
<bolt-share size="medium"
            opacity="60"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-60">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 80 1`] = `
<bolt-share size="medium"
            opacity="80"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-80">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share opacity: 100 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share size: medium 1`] = `
<bolt-share size="medium"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="small"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--medium">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="medium"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--medium">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;

exports[`<bolt-share> Component share size: small 1`] = `
<bolt-share size="small"
            opacity="100"
            align="start"
>
  <div class="c-bolt-share c-bolt-share--opacity-100">
    <bolt-list tag="ul"
               display="inline"
               spacing="xsmall"
               separator="none"
               align="start"
               valign="center"
    >
      <ssr-keep for="bolt-list"
                role="list"
                class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
      >
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          >
            <span class="c-bolt-share__label c-bolt-share__label--small">
              Share this page
            </span>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--facebook"
               href="https://www.facebook.com/sharer/sharer.php?u=https://boltdesignsystem.com&amp;src=sdkpreparse"
               target="_blank"
            >
              <bolt-icon name="facebook-solid"
                         size="small"
              >
                <span class="c-bolt-icon c-bolt-icon--facebook-solid c-bolt-icon--small">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 32"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M26 0a6 6 0 016 6v20a6 6 0 01-6 6h-4V19.6h4.2l.6-4.8h-4.7v-3.1c0-1.4.4-2.3 2.4-2.3H27V5a33.8 33.8 0 00-3.7-.2c-3.7 0-6.2 2.3-6.2 6.4v3.6h-4.2v4.8h4.2V32H6a6 6 0 01-6-6V6a6 6 0 016-6z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Facebook
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--twitter"
               href="https://twitter.com/intent/tweet?url=https://boltdesignsystem.com&text=Sample%20Share%20Text&via=pega&hashtags=boltDesignSystemRocks!"
               target="_blank"
            >
              <bolt-icon name="twitter"
                         size="small"
              >
                <span class="c-bolt-icon c-bolt-icon--twitter c-bolt-icon--small">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 26"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M32 3a14 14 0 01-3.3 3.5v.8C28.7 16 22.1 26 10.1 26A18.5 18.5 0 010 23a13.8 13.8 0 001.6.1 13.1 13.1 0 008.1-2.8 6.6 6.6 0 01-6.1-4.5 8.5 8.5 0 001.2 0 7 7 0 001.8-.1 6.6 6.6 0 01-5.3-6.5 6.5 6.5 0 003 .8 6.6 6.6 0 01-2-8.8 18.6 18.6 0 0013.5 6.9 7.4 7.4 0 01-.1-1.5A6.6 6.6 0 0122 0 6.5 6.5 0 0127 2 13 13 0 0031.1.6 6.6 6.6 0 0128.2 4a13 13 0 003.8-1z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Twitter
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item role="presentation">
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
          >
            <a class="c-bolt-share__link js-bolt-share__link--linkedin"
               href="https://www.linkedin.com/shareArticle?url=https://boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="linkedin"
                         size="small"
              >
                <span class="c-bolt-icon c-bolt-icon--linkedin c-bolt-icon--small">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                       xmlns="http://www.w3.org/2000/svg"
                       data-name="Layer 1"
                       viewbox="0 0 32 30.6"
                  >
                    <path fill="var(--bolt-theme-icon, currentColor)"
                          d="M7.3 10v20.6H.4V9.9zm.4-6.4A3.6 3.6 0 013.8 7a3.6 3.6 0 110-7.1 3.5 3.5 0 014 3.6zM32 18.8v11.8h-6.9v-11c0-2.8-1-4.7-3.4-4.7a3.8 3.8 0 00-3.6 2.5 5.1 5.1 0 00-.2 1.7v11.5h-6.8V9.9h6.8v3A6.8 6.8 0 0124 9.5c4.5 0 7.9 3 7.9 9.3z"
                    >
                    </path>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                LinkedIn
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
        <bolt-list-item last
                        role="presentation"
        >
          <ssr-keep for="bolt-list-item"
                    role="listitem"
                    class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
          >
            <a class="c-bolt-share__link js-bolt-share__link--email"
               href="mailto:?&body=Sample%20Text%20--%20https%3A//boltdesignsystem.com"
               target="_blank"
            >
              <bolt-icon name="email"
                         size="small"
              >
                <span class="c-bolt-icon c-bolt-icon--email c-bolt-icon--small">
                  <svg class="c-bolt-icon__icon c-bolt-icon__icon--small"
                       xmlns="http://www.w3.org/2000/svg"
                       viewbox="0 0 24 24"
                  >
                    <g fill="none"
                       fill-rule="evenodd"
                    >
                      <path>
                      </path>
                      <path fill="var(--bolt-theme-icon, currentColor)"
                            d="M20 19H4a1 1 0 01-1-1V8l8.4 5.8.6.2c.2 0 .4 0 .6-.2L21 8V18c0 .6-.4 1-1 1zM4 5h16c.4 0 .7.2.9.6L12 11.8 3.1 5.6c.2-.4.5-.6.9-.6zm19 1a3 3 0 00-3-3H4a3 3 0 00-3 3v12a3 3 0 003 3h16a3 3 0 003-3V6z"
                      >
                      </path>
                    </g>
                  </svg>
                </span>
              </bolt-icon>
              <span class="c-bolt-share__link-text">
                Email
              </span>
            </a>
          </ssr-keep>
        </bolt-list-item>
      </ssr-keep>
    </bolt-list>
  </div>
</bolt-share>
`;
